@@ -1,3 +1,6 @@
+Jan 21, 2026
+  ensembl: updated to build 115
+  
 Jan 13, 2026
   ontologies: set up 'disease' and 'chebi' loggers
 
